Feature: Add range mouseover hints to AR fields

--- a/templates/chat/roll-sr6.html
+++ b/templates/chat/roll-sr6.html
@@ -152,7 +152,7 @@
    	    	  {{#if configured.fireMode}}
    	  		  <td>{{localize (concat "shadowrun6.item.firemode." configured.fireMode)}}</td>
               {{/if}}
-    	  		  <td name="calcAR">{{attackrating configured.calcAttackRating}}</td>
+    	  		  <td name="calcAR">{{{attackrating configured.calcAttackRating}}}</td>
    	    	  {{#if configured.fireMode}}
    	  		  <td name="calcRounds">{{configured.calcRounds}}</td>
               {{/if}}
