--- a/templates/item/shadowrun6-gear-sheet-ro.html
+++ b/templates/item/shadowrun6-gear-sheet-ro.html
@@ -61,7 +61,7 @@
             (eq item.system.type "WEAPON_SPECIAL"))}}
 		<td>{{item.system.dmgDef}}</td>
 		<td>{{firemodes item.system.modes}}</td>
-		<td>{{attackrating item.system.attackRating}}</td>
+		<td>{{{attackrating item.system.attackRating}}}</td>
     	{{/if}}
 		{{#if (eq item.system.type "ARMOR")}}
 		<td>{{item.system.defense}}</td>
