Remove concat and concat3 helpers from system as its part of Foundry core

--- a/templates/dialog/partRollDialogSpell.html
+++ b/templates/dialog/partRollDialogSpell.html
@@ -30,7 +30,7 @@
 				<td><span id="spellArea">{{data.calcArea}}</span>m</td>
 				{{/if}}
 				{{#if (eq data.spell.category "combat")}}
-				<td><span id="spellDmg">{{data.calcDamage}}</span> {{localize (concat3 "shadowrun6.spell.damage_" data.spell.damage "_short")}}</td>
+				<td><span id="spellDmg">{{data.calcDamage}}</span> {{localize (concat "shadowrun6.spell.damage_" data.spell.damage "_short")}}</td>
 				{{/if}}
    	  	   </tr>
    	    </table>
