--- a/templates/parts/attributes.html
+++ b/templates/parts/attributes.html
@@ -3,7 +3,7 @@
     		<tr>
     {{#each config.PRIMARY_ATTRIBUTES as |attributeId|}}
     		  <th class="attribute" id="{{attributeId}}">
-    		    <label for="system.attributes.{{attributeId}}.current" title="{{localize (concat "attrib." attributeId )}}">{{localize (concat3 "attrib." attributeId "_short" )}}</label>
+    		    <label for="system.attributes.{{attributeId}}.current" title="{{localize (concat "attrib." attributeId )}}">{{localize (concat "attrib." attributeId "_short" )}}</label>
     		  </th>
     {{/each}}
     		</tr>
@@ -23,7 +23,7 @@
     		<tr>
     {{#each config.SECONDARY_ATTRIBUTES as |attributeId|}}
     		  <th class="attribute" id="{{attributeId}}">
-    		    <label for="system.attributes.{{attributeId}}.value" title="{{localize (concat "attrib." attributeId )}}">{{localize (concat3 "attrib." attributeId "_short" )}}</label>
+    		    <label for="system.attributes.{{attributeId}}.value" title="{{localize (concat "attrib." attributeId )}}">{{localize (concat "attrib." attributeId "_short" )}}</label>
     		  </th>
     {{/each}}
     		</tr>
