--- a/templates/parts/npc-attributes-ro.html
+++ b/templates/parts/npc-attributes-ro.html
@@ -3,7 +3,7 @@
     		<tr>
     {{#each config.NPC_ATTRIBUTES as |attributeId|}}
     		  <th class="attribute2" id="{{attributeId}}">
-    		    <label for="system.attributes.{{attributeId}}.current" title="{{localize (concat "attrib." attributeId )}}">{{localize (concat3 "attrib." attributeId "_short" )}}</label>
+    		    <label for="system.attributes.{{attributeId}}.current" title="{{localize (concat "attrib." attributeId )}}">{{localize (concat "attrib." attributeId "_short" )}}</label>
     		  </th>
     {{/each}}
     		</tr>
