--- a/templates/parts/npc_full_edit_sheet.html
+++ b/templates/parts/npc_full_edit_sheet.html
@@ -164,7 +164,7 @@
 							{{/each}}
 						</div>
 						<div class="skill-points">
-							<span>{{localize (concat3 "attrib." (skillAttr item.id) "_short")}}</span>
+							<span>{{localize (concat "attrib." (skillAttr item.id) "_short")}}</span>
 						</div>
 						<div class="skill-points">
 							<input name="skillPoints{{id}}" class="skill-value" type="number" data-field="item.system.points" value="{{item.system.points}}" />
