--- a/templates/parts/pc-skills.html
+++ b/templates/parts/pc-skills.html
@@ -25,7 +25,7 @@
             <td style="width: 30%">
                 <span class="skill-value skill-key rollable skill-name"  data-skill="{{id}}">{{localize (concat "skill." id ) }}</span>
             </td>
-            <td><span>{{localize (concat3 "attrib." (skillAttr id) "_short")}}</span></td>
+            <td><span>{{localize (concat "attrib." (skillAttr id) "_short")}}</span></td>
             <td><input name="skillPoints{{id}}" class="skill-value" type="number" data-field="system.skills.{{id}}.points" value="{{skill.points}}" /></td>
             <td><input name="skillMod{{id}}" class="skill-value" type="number" data-field="system.skills.{{id}}.modifier" value="{{skill.modifier}}" /></td>
             <td><input name="skillValue{{id}}" class="skill-value" type="number" data-field="system.skills.{{id}}.value" value="{{skill.value}}" data-skill="{{id}}" /></td>
