--- a/templates/parts/section-matrixactions.html
+++ b/templates/parts/section-matrixactions.html
@@ -40,7 +40,7 @@
 
        	</div>
        	<div class="collapsible-content closed" style="font-size: var(--font-size-11); text-align:left; color: rgb(0 66 17); margin-bottom: 4px; ">
-			{{localize (concat3 'shadowrun6.matrixaction.' actionId '.hint')}}
+			{{localize (concat 'shadowrun6.matrixaction.' actionId '.hint')}}
 		</div>
 		</div>
        {{/each}}
