--- a/templates/item/shadowrun6-gear-sheet.html
+++ b/templates/item/shadowrun6-gear-sheet.html
@@ -83,11 +83,11 @@
 
                     {{#each item.system.attackRating as |arating id|}}
                     <td style="text-align: center" data-array="system.attackRating">
-                        <input name="attackRating{{id}}" type="number" value="{{arating}}" data-array-field data-index="{{id}}" style="width:2em" class="centered box" title="{{localize (concat (concat "shadowrun6.roll.ar_" id) "_hint")}}"/>
+                        <input name="attackRating{{id}}" type="number" value="{{arating}}" data-array-field data-index="{{id}}" style="width:2em" class="centered box" title="{{localize (concat "shadowrun6.roll.ar_" id "_hint")}}"/>
                     </td>
                     {{/each}}
                 </tr>
-            </table>
+            </table>JEROEN - SA AR: {{item.system.modes.SA_ar_mod}}
             <table>
                 <tr>
                     <th>{{localize 'shadowrun6.item.skill'}}</th>
