Feature: Active Effects that modify Items (#3)

--- a/templates/item/shadowrun6-gear-sheet.html
+++ b/templates/item/shadowrun6-gear-sheet.html
@@ -87,7 +87,7 @@
                     </td>
                     {{/each}}
                 </tr>
-            </table>JEROEN - SA AR: {{item.system.modes.SA_ar_mod}}
+            </table>
             <table>
                 <tr>
                     <th>{{localize 'shadowrun6.item.skill'}}</th>
