Fix: Don't show SHADOWRUN logo on sheets that are minimized

--- a/styles/layout.css
+++ b/styles/layout.css
@@ -1,4 +1,4 @@
-.app.shadowrun6 .window-header::after {
+.app.shadowrun6:not(.minimized) .window-header::after {
 	display: block;
 	content: "";
 	position: absolute;
