Fix Roll Dialog where layout would jump a bit when switching FireModes that caused AR to change between single and double digits

--- a/templates/dialog/partRollDialogOpposed.html
+++ b/templates/dialog/partRollDialogOpposed.html
@@ -10,7 +10,7 @@
 			<table style="background-color: transparent; border: 0px">
 				<tr>
 					<td colspan="2">{{localize "shadowrun6.roll.attackRating"}}</td>
-					<td colspan="1"><label name="ar" id="baseAR">{{data.attackRating}}</label> + </td>
+					<td colspan="1" style="width: 3em; text-align: right;"><label name="ar" id="baseAR">{{data.attackRating}}</label> + </td>
 					<td colspan="1"><input id="arMod" type="number" name="attackRatingMod" value="{{data.attackRatingMod}}" class="calc-edge-edit armod-value centered" style="width: 2em"/></td>
 					<td colspan="1" style="font-weight: bold;">vs</td>
 					<td colspan="2">{{localize "shadowrun6.roll.defRating"}}</td>
