Weapon Rolls with Grunt Groups (#44)

--- a/templates/parts/npc_grunt_group.hbs
+++ b/templates/parts/npc_grunt_group.hbs
@@ -1,4 +1,4 @@
 			<div style="flex:5">
 				<label for="grunt_group">{{localize 'shadowrun6.npc.grunt_group'}}:</label>
-				<span id="grunt_group"><strong>{{localize 'shadowrun6.npc.grunt_group_id' groupId=gruntGroupId}}</strong>x{{actor.gruntGroupMembers}}</span>
+				<span id="grunt_group"><strong>{{localize 'shadowrun6.npc.grunt_group_id' groupId=gruntGroup.id}}</strong>x{{gruntGroup.members}}</span>
 			</div>
