Add explenation titles to the Matrix Monitor input fields on the Item Sheet (#135)

--- a/templates/item/shadowrun6-gear-sheet.html
+++ b/templates/item/shadowrun6-gear-sheet.html
@@ -225,9 +225,9 @@
                 </tr>
                 <tr>
                     <td class="box centered">
-                        <input name="dmg" type="number" value="{{item.system.dmg}}" data-field="system.dmg" class="box centered" style="width:2em" />
+                        <input name="dmg" type="number" value="{{item.system.dmg}}" data-field="system.dmg" class="box centered" style="width:2em" title="{{localize "shadowrun6.item.damage"}}"/>
                          /
-                        <input type="number" value="{{item.maxtrixMonitor}}" class="box centered" style="width:2em" disabled>
+                        <input type="number" value="{{item.maxtrixMonitor}}" class="box centered" style="width:2em" title="{{localize "shadowrun6.numerical.max"}}" disabled>
                     </td>
                     <td class="box centered">
                         <input name="devRating" type="number" value="{{item.system.devRating}}" data-field="system.devRating" class="box centered" style="width:2em" />
@@ -256,9 +256,9 @@
                 </tr>
                 <tr>
                     <td class="box centered">
-                        <input name="dmg" type="number" value="{{item.system.dmg}}" data-field="system.dmg" class="box centered" style="width:2em" />
+                        <input name="dmg" type="number" value="{{item.system.dmg}}" data-field="system.dmg" class="box centered" style="width:2em" title="{{localize "shadowrun6.item.damage"}}"/>
                          /
-                        <input type="number" value="{{item.maxtrixMonitor}}" class="box centered" style="width:2em" disabled>
+                        <input type="number" value="{{item.maxtrixMonitor}}" class="box centered" style="width:2em" title="{{localize "shadowrun6.numerical.max"}}" disabled>
                     </td>
                     <td class="box centered"> <input name="devRatingDeck" type="number" value="{{item.system.devRating}}"
                             data-field="system.devRating" class="box centered" style="width:2em" /></td>
@@ -330,9 +330,9 @@
                     <td></td>
                     {{/if}}
                     <td class="box centered">
-                        <input name="dmg" type="number" value="{{item.system.dmg}}" data-field="system.dmg" class="box centered" style="width:2em" />
+                        <input name="dmg" type="number" value="{{item.system.dmg}}" data-field="system.dmg" class="box centered" style="width:2em" title="{{localize "shadowrun6.item.damage"}}"/>
                          /
-                        <input type="number" value="{{item.maxtrixMonitor}}" class="box centered" style="width:2em" disabled>
+                        <input type="number" value="{{item.maxtrixMonitor}}" class="box centered" style="width:2em" title="{{localize "shadowrun6.numerical.max"}}" disabled>
                     </td>
 
                 </tr>
