Fix hidden (old) input field from attributes partial template

--- a/templates/parts/attributes-augmented.html
+++ b/templates/parts/attributes-augmented.html
@@ -7,7 +7,7 @@
             </a>
          </p>
          <span>{{attribute.pool}}</span>
-         <input name="attributesPool{{id}}" type="hidden" data-dtype="Number" data-field="system.attributes.{{id}}.pool" value="8" />
+         <input name="attributesPool{{id}}" type="hidden" data-dtype="Number" data-field="system.attributes.{{id}}.pool" value="{{attribute.pool}}" />
          <div class="field {{id}}Changed">
             <label>{{localize 'shadowrun6.numerical.base'}}</label>
             <input name="attributesBase{{id}}" type="number" data-dtype="Number" data-field="system.attributes.{{id}}.base" value="{{attribute.base}}" placeholder="base" title="{{localize 'shadowrun6.numerical.baseString'}}" min="1" max="6" />
