--- a/templates/parts/section-drones.html
+++ b/templates/parts/section-drones.html
@@ -18,7 +18,7 @@
 		</tr>
 		{{#each actor.items as |item id|}}
 		{{#if (eq item.type 'gear')}}
-		{{#if (eq item.system.type "DRONES") }}
+		{{#if (eq (subString item.system.type 0 5) "DRONE") }}
 		<tr class="item" data-item-id="{{this.id}}"  title="{{sr6_description item.system 'item'}}">
 			<td style="margin-right: 1rem"><button type="button" name="collapseDrone{{id}}" class="collapsible {{item.flags.shadowrun6-eden.collapse-state}}" data-item-id="{{this.id}}">+</button><label class="item-name draggable" data-uuid="{{item.uuid}}" data-skill="{{id}}">{{item.name}}</label></td>
 			<td class="centered"><label class="small-column" >{{item.system.handlOn}}/{{item.system.handlOff}}</label></td>
