Add Item Mods in Items support (incl drag & drop) (#128)

--- a/templates/item/shadowrun6-gear-sheet.html
+++ b/templates/item/shadowrun6-gear-sheet.html
@@ -346,4 +346,5 @@
     </section>
 </form>
 
+{{> "systems/shadowrun6-eden/templates/item/item-mods.hbs" }}
 {{> "systems/shadowrun6-eden/templates/item/item-effects.hbs" }}
