--- a/templates/actor/shadowrun6-Player-sheet.html
+++ b/templates/actor/shadowrun6-Player-sheet.html
@@ -77,9 +77,12 @@
 			{{> "systems/shadowrun6-eden/templates/parts/section-gear.html" geartype="TOOLS" title=(localize 'shadowrun6.gear.subtype.TOOLS')}}
 			
 			{{> "systems/shadowrun6-eden/templates/parts/section-gear.html" geartype="ACCESSORY" title=(localize 'shadowrun6.gear.subtype.ACCESSORY')}}
-			{{> "systems/shadowrun6-eden/templates/parts/section-gear.html" geartype="ARMOR_ADDITION" title=(localize 'shadowrun6.section.armor_adds')}}
+			{{!-- TODO: migrate these mods? --}}
+			{{!-- {{> "systems/shadowrun6-eden/templates/parts/section-gear.html" geartype="ARMOR_ADDITION" title=(localize 'shadowrun6.section.armor_adds')}} --}}
 			
 			{{> "systems/shadowrun6-eden/templates/parts/section-gear.html" geartype="MAGICAL" title=(localize 'shadowrun6.gear.subtype.MAGIC_SUPPLIES')}}
+
+			{{> "systems/shadowrun6-eden/templates/parts/section-item-mods.html" }}
 
 		</div>
 
