--- a/templates/item/item-effects.hbs
+++ b/templates/item/item-effects.hbs
@@ -1,4 +1,4 @@
-{{! Effects Tab }}
+{{! Effects Section }}
 {{log 'item-effects.hbs' effects}}
 
 <div class="section" style="display: inline-block; width:100%">
