Fix enriched HTML for description/accessories/notes fields

--- a/templates/item/shadowrun6-critterpower-sheet.html
+++ b/templates/item/shadowrun6-critterpower-sheet.html
@@ -35,7 +35,7 @@
                 </td>
             </table>
             <h3>{{localize 'shadowrun6.item.description'}}</h3>
-            {{editor item.system.description target="system.description" button=true owner=owner editable=editable engine="prosemirror"}}
+            {{editor item.enriched.description target="system.description" fieldName=item.system.description button=true owner=owner editable=editable engine="prosemirror"}}
         </div>
     </section>
 </form>
