--- a/templates/parts/section-gear.html
+++ b/templates/parts/section-gear.html
@@ -48,9 +48,9 @@
          <td colspan="5">
          	<div class="collapsible-content {{item.flags.shadowrun6-eden.collapse-state}}" style="font-size: 0.8em;">
         	   <div style="font-weight: bold;">{{ localize 'shadowrun6.label.accessories' }}</div>
-			   <div>{{{item.system.accessories}}} &nbsp;</div>
+			   <div>{{{item.enriched.accessories}}} &nbsp;</div>
         	   <div style="font-weight: bold;">{{ localize 'shadowrun6.item.description' }}</div>
-			   <div>{{{item.system.description}}} &nbsp;</div>
+			   <div>{{{item.enriched.description}}} &nbsp;</div>
          	</div>
          </td>
        </tr>
