--- a/templates/parts/section-item-mods.html
+++ b/templates/parts/section-item-mods.html
@@ -40,7 +40,7 @@
          <td colspan="5">
          	<div class="collapsible-content {{item.flags.shadowrun6-eden.collapse-state}}" style="font-size: 0.8em;">
         	   <div style="font-weight: bold;">{{ localize 'shadowrun6.item.description' }}</div>
-			   <div>{{{item.system.description}}} &nbsp;</div>
+			   <div>{{{item.enriched.description}}} &nbsp;</div>
          	</div>
          </td>
        </tr>
