--- a/templates/parts/section-complexforms.html
+++ b/templates/parts/section-complexforms.html
@@ -29,7 +29,7 @@
 	   </tr>
        <tr>
          <td colspan="6">
-         	<div class="collapsible-content {{item.flags.shadowrun6-eden.collapse-state}}">
+         	<div class="collapsible-content closed">
 
          	</div>
          </td>
