--- a/templates/parts/section-item-mods.html
+++ b/templates/parts/section-item-mods.html
@@ -22,9 +22,9 @@
 		<tr class="item list-item" data-item-id="{{item.id}}">
 			<td style="margin-right: 1rem; width: 0.7em;">
 				{{#if item.system.description.length}}
-				<button type="button" name="collapseGear{{id}}" class="collapsible {{item.flags.shadowrun6-eden.collapse-state}}" data-item-id="{{this.id}}">+</button>
+				<button type="button" name="collapseGear{{id}}" class="collapsible closed" data-item-id="{{this.id}}">+</button>
 				{{else}}
-				<button type="button" name="collapseGear{{id}}" class="collapsible {{item.flags.shadowrun6-eden.collapse-state}} empty" data-item-id="{{this.id}}">+</button>
+				<button type="button" name="collapseGear{{id}}" class="collapsible closed empty" data-item-id="{{this.id}}">+</button>
 				{{/if}}
 			</td>
 
@@ -38,7 +38,7 @@
 	   </tr>
        <tr>
          <td colspan="5">
-         	<div class="collapsible-content {{item.flags.shadowrun6-eden.collapse-state}}" style="font-size: 0.8em;">
+         	<div class="collapsible-content closed" style="font-size: 0.8em;">
         	   <div style="font-weight: bold;">{{ localize 'shadowrun6.item.description' }}</div>
 			   <div>{{{item.enriched.description}}} &nbsp;</div>
          	</div>
