--- a/templates/parts/section-matrixdevices.html
+++ b/templates/parts/section-matrixdevices.html
@@ -27,7 +27,7 @@
          (eq item.system.subtype "CYBERJACK"))
 		}}
        <tr class="item" data-item-id="{{this.id}}" title="{{item.system.description}}">
-       	<td style="margin-right: 1rem"><button type="button" name="collapseMatrixDevice{{id}}" class="collapsible {{item.flags.shadowrun6-eden.collapse-state}}" data-item-id="{{this.id}}">+</button><label class="item-name draggable" data-uuid="{{item.uuid}}" data-skill="{{id}}">{{item.name}}</label></td>
+       	<td style="margin-right: 1rem"><button type="button" name="collapseMatrixDevice{{id}}" class="collapsible closed" data-item-id="{{this.id}}">+</button><label class="item-name draggable" data-uuid="{{item.uuid}}" data-skill="{{id}}">{{item.name}}</label></td>
          <td><label class="middle-column" >{{item.system.devRating}}</label></td>
          <td><label class="middle-column" >-</label></td>
          <td><label class="middle-column" >-</label></td>
@@ -46,8 +46,8 @@
        </tr>
        <tr>
          <td colspan="9">
-         	<div class="collapsible-content {{item.flags.shadowrun6-eden.collapse-state}}">
-        	   {{ localize 'shadowrun6.label.accessories' }} <textarea class="box" type="text"     data-item-id="{{this.id}}" data-field="system.accessories" type="text" data-dtype="Text" style="width: 25em">{{item.system.accessories}}</textarea>
+         	<div class="collapsible-content closed">
+        	   {{ localize 'shadowrun6.label.accessories' }} <textarea class="box" type="text" data-item-id="{{this.id}}" data-field="system.accessories" type="text" data-dtype="Text" style="width: 25em">{{item.system.accessories}}</textarea>
 				{{# if (eq item.system.subtype "COMMLINK")}}
 			   {{> "systems/shadowrun6-eden/templates/parts/programs.html" config=../config item=this }}
 			   {{/if}}
@@ -57,7 +57,7 @@
 		{{/if}}
 		{{#if (eq item.system.subtype "CYBERDECK") }}
        <tr class="item" data-item-id="{{this.id}}" title="{{item.system.description}}">
-       	<td style="margin-right: 1rem"><button type="button" name="collapseDeck{{id}}" class="collapsible {{item.flags.shadowrun6-eden.collapse-state}}" data-item-id="{{this.id}}">+</button><label class="item-name draggable" data-uuid="{{item.uuid}}" data-skill="{{id}}">{{item.name}}</label></td>
+       	<td style="margin-right: 1rem"><button type="button" name="collapseDeck{{id}}" class="collapsible closed" data-item-id="{{this.id}}">+</button><label class="item-name draggable" data-uuid="{{item.uuid}}" data-skill="{{id}}">{{item.name}}</label></td>
          <td><label class="middle-column" >{{item.system.devRating}}</label></td>
          <td><label class="middle-column" >{{item.system.a}}</label></td>
          <td><label class="middle-column" >{{item.system.s}}</label></td>
@@ -76,7 +76,7 @@
        </tr>
        <tr>
          <td colspan="9">
-         	<div class="collapsible-content {{item.flags.shadowrun6-eden.collapse-state}}">
+         	<div class="collapsible-content closed">
         	   {{ localize 'shadowrun6.label.accessories' }} <textarea class="box" type="text"     data-item-id="{{this.id}}" data-field="system.accessories" type="text" data-dtype="Text" style="width: 25em">{{item.system.accessories}}</textarea>
 				{{> "systems/shadowrun6-eden/templates/parts/programs.html" config=../config item=this }}
         	   </div>
