--- a/templates/parts/section-weapons.html
+++ b/templates/parts/section-weapons.html
@@ -9,7 +9,7 @@
         {{#if (or (eq item.system.type "WEAPON_FIREARMS") (eq item.system.type "WEAPON_RANGED"))}}
         <tr class="item" data-item-id="{{this.id}}"  title="{{sr6_description item.system 'item'}}">
             <td style="margin-right: 1rem; width: 5%">
-                <button type="button" name="collapseWeapon{{id}}" class="collapsible {{item.flags.shadowrun6-eden.collapse-state}}" data-item-id="{{this.id}}">+</button>
+                <button type="button" name="collapseWeapon{{id}}" class="collapsible closed" data-item-id="{{this.id}}">+</button>
             </td>
             <td style="width: 30%">
                 <label class="item-name draggable" data-uuid="{{item.uuid}}" data-skill="{{id}}">{{item.name}}</label>
@@ -34,7 +34,7 @@
         </tr>
         <tr>
             <td colspan="8">
-         	    <div class="collapsible-content {{item.flags.shadowrun6-eden.collapse-state}}">
+         	    <div class="collapsible-content closed">
                     <table>
                         <tr>
                             <td>
@@ -75,7 +75,7 @@
         {{#iff item.system.type '==' "WEAPON_CLOSE_COMBAT"}}
         <tr class="item" data-item-id="{{this.id}}"  title="{{sr6_description item.system 'item'}}">
             <td style="margin-right: 1rem; width: 5%">
-                <button type="button" name="collapseCloseCombatWeapon{{id}}" class="collapsible {{item.flags.shadowrun6-eden.collapse-state}}" data-item-id="{{this.id}}">+</button>
+                <button type="button" name="collapseCloseCombatWeapon{{id}}" class="collapsible closed" data-item-id="{{this.id}}">+</button>
             </td>
             <td style="width: 30%">
                 <label class="item-name draggable" data-uuid="{{item.uuid}}" data-skill="{{id}}">{{item.name}}</label>
@@ -94,7 +94,7 @@
         </tr>
         <tr>
             <td colspan="8">
-                <div class="collapsible-content {{item.flags.shadowrun6-eden.collapse-state}}">
+                <div class="collapsible-content closed">
                     <table>
                         <tr>
                             <td>
@@ -138,7 +138,7 @@
         {{#iff item.system.type '==' "WEAPON_SPECIAL"}}
         <tr class="item" data-item-id="{{this.id}}" title="{{sr6_description item.system 'item'}}">
             <td style="margin-right: 1rem; width: 5%">
-                <button type="button" name="collapseSpecialWeapon{{id}}" class="collapsible {{item.flags.shadowrun6-eden.collapse-state}}" data-item-id="{{this.id}}">+</button>
+                <button type="button" name="collapseSpecialWeapon{{id}}" class="collapsible closed" data-item-id="{{this.id}}">+</button>
             </td>
             <td style="width: 30%">
                 <label class="item-name draggable" data-uuid="{{item.uuid}}" data-skill="{{id}}">{{item.name}}</label>
@@ -166,7 +166,7 @@
         </tr>
         <tr>
             <td colspan="8">
-                <div class="collapsible-content {{item.flags.shadowrun6-eden.collapse-state}}">
+                <div class="collapsible-content closed">
                     <table>
                         <tr>
                             <td>
