--- a/templates/parts/vehicle-weapons.html
+++ b/templates/parts/vehicle-weapons.html
@@ -10,7 +10,7 @@
 	           (or (eq item.system.type "WEAPON_SPECIAL")
 			    (or (eq item.system.type "WEAPON_CLOSE_COMBAT") (eq item.system.type "WEAPON_RANGED") ))) }}
        <tr class="item" data-item-id="{{this.id}}"  title="{{item.system.description}}">
-       	<td style="margin-right: 1rem"><button type="button" class="collapsible {{item.flags.shadowrun6-eden.collapse-state}}" data-item-id="{{this.id}}">+</button><label class="item-name draggable" data-uuid="{{item.uuid}}" data-skill="{{id}}">{{item.name}}</label></td>
+       	<td style="margin-right: 1rem"><button type="button" class="collapsible closed" data-item-id="{{this.id}}">+</button><label class="item-name draggable" data-uuid="{{item.uuid}}" data-skill="{{id}}">{{item.name}}</label></td>
          <td><label class="middle-column important-column">{{item.system.dmgDef}}</label></td>
          <td><label class="middle-column" >{{{attackrating item.system.attackRating}}}</label></td>
 		 <td style="width: 20%; text-align: right; vertical-align: middle">
@@ -31,7 +31,7 @@
        </tr>
        <tr>
          <td colspan="6">
-         	<div class="collapsible-content {{item.flags.shadowrun6-eden.collapse-state}}">
+         	<div class="collapsible-content closed">
         	   {{ localize 'shadowrun6.label.modifications' }} 
 			   <textarea name="{{id}}Accessories" class="box" type="text"     data-item-id="{{this.id}}" data-field="system.accessories" type="text" data-dtype="Text" style="width: 25em">{{item.system.accessories}}</textarea>
 			   <br/>
