--- a/templates/parts/monitors.html
+++ b/templates/parts/monitors.html
@@ -73,7 +73,7 @@
 			<td class="barMatrixMax">
 				<div style="width: 300px;">
 					<div style="position: relative; z-index: 1; border: solid black 1px;">
-						<div id="barMatrixCur" style="background-color: #00ff32; width: 78%;">&nbsp</div>
+						<div id="barMatrixCur" style="background-color: rgb(0 200 50); width: 78%;">&nbsp</div>
 						<div id="barMatrixBoxes" class="monitor"></div>
 					</div>
 				</div>
