Added support applying matrix damage induced modifiers

--- a/templates/dialog/configurable-roll-dialog.html
+++ b/templates/dialog/configurable-roll-dialog.html
@@ -93,6 +93,11 @@
         <td style="text-align:right">{{localize "shadowrun6.roll.wilddie"}}</td>
         <td><input type="checkbox" name="useWildDie" {{checked data.useWildDie}} /></td>
     	</tr>
+      <tr>
+        <td colspan="5"></td>
+        <td style="text-align:right">{{localize "shadowrun6.roll.matrix-modifier"}}</td>
+        <td><input type="checkbox" id="useMatrixModifier" {{checked data.useMatrixModifier}} /></td>
+      </tr>
     </table>
 
     <div class="hidden"> {{!-- hidden for js to still work --}}
