--- a/templates/item/item-effects.hbs
+++ b/templates/item/item-effects.hbs
@@ -1,7 +1,7 @@
 {{! Effects Section }}
 {{log 'item-effects.hbs' effects}}
 
-<div class="section" style="display: inline-block; width:100%">
+<div class="section" style="display: inline-block; margin: 5px; min-width: 580px;">
   <div class="section-head">
     <h2 class="section-title">{{ localize 'shadowrun6.effect.Label' }}</h2>
   </div>
