--- a/templates/item/item-mods.hbs
+++ b/templates/item/item-mods.hbs
@@ -1,7 +1,7 @@
 {{! Gear Mods Section }}
 {{log 'item-mods.hbs' this}}
 
-<div class="section" style="display: inline-block; margin: 5px; min-width: 320px;">
+<div class="section" style="display: inline-block; margin: 5px; min-width: 580px;">
  <div class="section-head">
 	<h2 class="section-title">{{localize 'SR6.Item.mod.label.section'}}</h2>
 	{{#if item.actor}}
@@ -15,9 +15,9 @@
 	        <th style="width: 24px;"></th>
 
 	        <th style="text-align: left; padding-left: 3px;">{{ localize 'shadowrun6.label.column.name' }}</th>
-	        <th style="width: 40%">{{ localize 'SR6.Common.FIELDS.type.label' }}</th>
+	        <th style="width: 25%">{{ localize 'SR6.Common.FIELDS.type.label' }}</th>
 
-	        <th style="width: 20%">{{ localize 'shadowrun6.label.column.action' }}</th>
+	        <th style="width: 100px">{{ localize 'shadowrun6.label.column.action' }}</th>
 	      </tr>
 	    </thead>
 
