--- a/templates/item/shadowrun6-mod-sheet.html
+++ b/templates/item/shadowrun6-mod-sheet.html
@@ -3,7 +3,7 @@
 
     {{!-- Sheet Body --}}
     <section class="sheet-body">
-        <div class="section">
+        <div class="section" style="display: inline-block; margin: 5px; min-width: 580px;">
             <table>
                 <tr>
                     <th>{{localize 'shadowrun6.item.type'}}</th>
@@ -19,19 +19,21 @@
                             {{selectOptions systemFields.type.choices selected=item.system.type localize=true blank="-"}}
                         </select>
                     </td>
-                    <td>
-                        
+                    <td class="item-modded">
+                        {{#if item.system.installedIn}}
+                        <div data-item-id="{{item.id}}">
+                            {{item.system.installedIn.name}}
+                            <a class="item-control" data-action="uninstallMod" title="{{localize 'SR6.Item.mod.label.uninstall' }}"><i class="fas fa-toggle-on"></i></a>
+                            <a class="item-control item-edit" title="{{localize 'shadowrun6.label.edit' }}"><i class="fas fa-edit"></i></a>
+                        </div>
+                        {{else}}
+                        <div>{{localize 'SR6.Item.mod.label.not_installed'}}</div>
+                        {{/if}}
                     </td>
                     <td style="text-align: center"><input type="text" value="{{item.system.availDef}}" data-field="system.availDef" class="box centered" style="width: 2.4em" /></td>
                     <td style="text-align: center"><span class="input-symbol-nuyen"><input type="number" value="{{item.system.price}}" data-field="system.price" min="0" class="box centered" style="width: 5em" /></span></td>
                 </tr>
             </table>
-        </div>
-
-        {{log 'JEROEN' this}}
-        {{formGroup systemFields.embeddedInUuid value=item.system.embeddedInUuid}}
-
-        <div class="section">
             <h3>{{localize 'shadowrun6.item.description'}}</h3>
             {{editor item.enriched.description target="system.description" fieldName=item.system.description button=true owner=owner editable=editable engine="prosemirror"}}
         </div>
