ActiveEffects on Gear Mods will by default apply to the item (#128)(#3)

--- a/templates/sheets/active-effect/changes.hbs
+++ b/templates/sheets/active-effect/changes.hbs
@@ -6,10 +6,14 @@
             <p>{{{localize "shadowrun6.active_effect.explanation"}}}</p>
             <ul>
                 {{#each tab.usage_tips as |tip i|}}
-                <li>{{{localize (concat "shadowrun6.active_effect.usage_tips." i) }}}</li>
+                    <li>{{{localize (concat "shadowrun6.active_effect.usage_tips." i) }}}</li>
                 {{/each}}
                 {{#if isItemEffect}}
-                <li>{{{localize "shadowrun6.active_effect.item_tip"}}}</li>
+                    {{#iff document.parent.type '==' "mod"}}
+                    <li>{{{localize "shadowrun6.active_effect.gear_mod_tip"}}}</li>
+                    {{else}}
+                    <li>{{{localize "shadowrun6.active_effect.item_tip"}}}</li>
+                    {{/iff}}
                 {{/if}}
             </ul>
             <p>{{localize "shadowrun6.active_effect.more_info"}} <a href="https://foundryvtt.com/article/active-effects/">FoundryVTT.com Active Effects</a></p>
