--- a/templates/item/item-effects.hbs
+++ b/templates/item/item-effects.hbs
@@ -44,8 +44,10 @@
                 <img class='effect-image' src='{{effect.img}}' />
                 <div>{{effect.name}}</div>
               </div>
-              {{#iff effect.parent.type '!=' "mod"}}
-              <div class='effect-source'>{{effect.parent.name}}</div>
+              {{#iff ../../item.type '!=' "mod"}}
+              <div class='effect-source'>
+                {{effect.sourceName}} {{#iff effect.parent.type '==' "mod"}}<a class="item-control item-edit" title="Edit"><i class="fas fa-edit"></i></a>{{/iff}}
+                </div>
               {{/iff}}
               <div class='effect-duration'>
                 {{#iff effect.duration.type '==' "none"}}
@@ -70,6 +72,7 @@
                 >
                   <i class='fas fa-edit'></i>
                 </a>
+                {{#iff effect.parent.type '!=' "mod"}}
                 <a
                   class='effect-control'
                   data-action='deleteDoc'
@@ -78,6 +81,14 @@
                 >
                   <i class='fas fa-trash'></i>
                 </a>
+                {{else}}
+                <a
+                  class='effect-control disabled'
+                  title='{{localize "shadowrun6.effect.CantDelete"}}'
+                >
+                  <i class='fas fa-trash'></i>
+                </a>
+                {{/iff}}
               </div>
             </li>
           {{/each}}
