Change ActiveEffect Config to save on any change so it behaves similar to Actor/Item sheets (#3)

--- a/templates/sheets/active-effect/v12-config.html
+++ b/templates/sheets/active-effect/v12-config.html
@@ -178,7 +178,7 @@
         {{/if}}
     </section>
 
-    <footer class="sheet-footer">
+    {{!-- <footer class="sheet-footer">
         <button type="submit"><i class="fas fa-save"></i> {{localize submitText}}</button>
-    </footer>
+    </footer> --}}
 </form>
